DMP-2131 Update ARM Manifest file fields - Media
Code tidy